# NS-FDTD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  batch.sh  imgui.ini
batch/: batch-s1.sh  batch-s2.sh  batch-s3.sh
scene/model/: HairMultilayerDamagedLackLayerModel.json  HairMultilayerDamagedLackLayerPerlinModel.json  HairMultilayerDamagedTiltModel.json  HairMultilayerDamagedTiltPerlinModel.json  HairMultilayerLongitudinalModel.json  HairMultilayerPerlinModel.json  HairPretteMultilayerModel.json  HairPretteMultilayerPerlinModel.json  genjson.py  hairmodel.json  hairmodel.py  hairmodelDamaged.json  hairmodelDamagedLargeDis.json  hairmodelDamagedLargeDisPerlin.json  hairmodelRandom.json  hairmodelRepaired.json  hairmodelRepairedPerlin.json  imgui.ini
scene/shaders/: Image_frag.glsl  Image_vert.glsl
src/: EventState.cpp  FDTD.cpp  FDTD.h  FDTD_TE.cpp  FDTD_TE.h  FDTD_TM.cpp  FDTD_TM.h  Field.cpp  Field.h  LightSource.h  MenuWindow.cpp  MenuWindow.h  Model.cpp  Model.h  NsFDTD.cpp  NsFDTD_TE.cpp  NsFDTD_TE.h  NsFDTD_TM.cpp  NsFDTD_TM.h  Object.h  PhysicalConstant.h  Simulator.cpp  Simulator.h  Solver.cpp  Solver.h  StFDTD.cpp  StFDTD_TE.cpp  StFDTD_TE.h  StFDTD_TM.cpp  StFDTD_TM.h  main.cpp
src/cli/: main.cpp
src/gui/: GUIApp.cpp  GUIApp.hpp  GUIElement.hpp  GUILayer.cpp  GUILayer.hpp  ImageBuffer.cpp  ImageBuffer.hpp  ImageDispalyLayer.cpp  ImageDispalyLayer.hpp  ImguiBuilder.hpp  Menu.cpp  Menu.hpp  Shader.hpp  SimControl.cpp  SimControl.hpp  Window.cpp  Window.hpp  main.cpp
src/model/: FazzyModel.cpp  FazzyModel.h  HairMultilayerDamagedModel.cpp  HairMultilayerDamagedModel.h  HairMultilayerLongitudinalModel.cpp  HairMultilayerLongitudinalModel.h  HairMultilayerModel.cpp  HairMultilayerModel.h  HairMultilayerRepairedModel.cpp  HairMultilayerRepairedModel.h  HairPretteMultilayerModel.cpp  HairPretteMultilayerModel.h  model_builder.cpp  model_builder.hpp
src/type/: Field.cpp  Field.h  ImageBuffer.cpp  ImageBuffer.hpp  Range.h  SimType.hpp
tests/: phase.json  test_model_phase.cpp
